# v8

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  TEST_RESULTS.md  build.bat  build.sh  configure.bat  fetch_deps.py  v8-inspector-stub.cc
cmake/: abseil.cmake  generate_icu_data.py  icu.cmake  install.cmake  msvc-toolchain.cmake  snapshot.cmake  sources.cmake  targets.cmake  torque.cmake  unittests.cmake  v8Config.cmake.in  zlib.cmake
docs/: AGENT_WORKFLOW.md  MSVC_PATTERNS.md  VERSION_GUIDE.md  mjsunit-analysis.md  test-results.md  unittest-analysis.md
patches/: 001-msvc-compatibility.patch  002-wasm-drumbrake-fix.patch  003-msvc-using-enum-fix.patch  004-ia32-support.patch
prompts/: coordinator.md  workflow.md
prompts/sub/: build_attempt.md  error_analysis.md  implementation_review.md  patch_creation.md  plan_review.md  source_generation.md  test_verification.md
scripts/: detect_features.py  generate_fetch_deps.py  generate_sources.py  generate_torque_list.py  orchestrate.py  parse_gn.py
test/: hello_v8.cc  run_mjsunit.py  run_unittests.py
